Mon May 17 19:29:43 2004  Venkita Subramonian  <venkita@cs.wustl.edu>

	* tools/RTComponentServer/RTServer_Impl.cpp:
	* tools/RTComponentServer/RTServer_Impl.h:
	* tools/RTComponentServer/RTServer_Impl.inl: Added extra
	  parameters to RTContainer_Impl, RTSession_Container and
	  ComponentServer_Impl ctors for static configuration.

	* tools/static_configurator/Static_Assembly.h:
	* tools/static_configurator/Static_Assembly_Visitors.cpp:
	* tools/static_configurator/Static_Assembly_Visitors.h:
	* tools/static_configurator/Static_Configurator.cpp:
	* tools/static_configurator/Static_Configurator.h:
	* tools/static_configurator/Static_Configurator.mpc:

	  Changes to statically parse .rtcad files and generate main
	  driver for static RTCCM applications.
	
Mon May 17 16:16:37 2004  Venkita Subramonian  <venkita@cs.wustl.edu>

	Merging RTCIAO-tests branch to the main trunk. This branch
	contained the RTCCM tests from Nanbor (nanbor@txcorp.com).
	
	* ciao/CIAO_common.h:
	* ciao/Client_init.cpp: Minor modifications to CIAO core. Addition
	  of CIAO_debug_level. 
	
	* ciao/ComponentInstallation_Impl.cpp:
	* ciao/ServerActivator_Impl.cpp:
	* ciao/ServerActivator_Impl.h: Addition of extra command line
	  flags to be passed on to the component server during its spawning.	
	
	* tests/RTCCM/Priority_Test/descriptors/CB_Worker.csd:
	* tests/RTCCM/Priority_Test/descriptors/IOB_Worker.csd:
	* tests/RTCCM/Priority_Test/descriptors/Worker.ssd:
	* tests/RTCCM/Priority_Test/descriptors/CIAO_Installation_Data.ini:
	* tests/RTCCM/Priority_Test/descriptors/Controller.csd:
	* tests/RTCCM/Priority_Test/descriptors/Controller.ssd:
	* tests/RTCCM/Priority_Test/descriptors/RTsvc.conf:
	* tests/RTCCM/Priority_Test/descriptors/svcmap.dat:
	* tests/RTCCM/Priority_Test/descriptors/test.dat:
	* tests/RTCCM/Priority_Test/descriptors/test.rtd: 
	* tests/RTCCM/Priority_Test/descriptors/basic-remote.cad:
	* tests/RTCCM/Priority_Test/descriptors/basic_remote.pl: